# remote

./: CMakeLists.txt  README.md  backup.cpp  backup.h  command.cpp  command.h  config.cpp  config.h  create_web_files.py  download  download_pico2  httprequest.cpp  httprequest.h  irdevice.cpp  irdevice.h  irprocessor.cpp  irprocessor.h  jsonmap.cpp  jsonmap.h  jsonstring.cpp  jsonstring.h  lwipopts.h  menu.cpp  menu.h  remote.cpp  remote.h  remote_backup.cpp  remote_cleanup.cpp  remote_config.cpp  remote_log.cpp  remote_menu.cpp  remote_remote.cpp  remote_setup.cpp  remote_test.cpp  remote_tvadapter.cpp  remote_watchdog.cpp  remotefile.cpp  remotefile.h  tvcec_diagram.odp  user-manual.odt  (+2 more)
data/: backup.html  backup.js  config.html  config.js  editprompt.html  icons.json  index.html  log.html  log.js  menuedit.html  navigator.js  setup.html  setup.js  setupbtn.html  setupbtn.js  test.html  test.js  webremote.css  webremote.js  websocket.js
